<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="51dp"
                    android:layout_gravity="center"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/field_idTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:autofillHints=""/>

                <TextView
                    android:id="@+id/hintTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_gravity="center"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:autofillHints=""
                    tools:ignore="TextFields" />

                <TextView
                    android:id="@+id/field_typeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_gravity="center"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:autofillHints=""/>

                <TextView
                    android:id="@+id/keyboardTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_gravity="center"
                    android:hint="@string/birthday"
                    android:inputType="text"
                    android:autofillHints=""/>

                <TextView
                    android:id="@+id/requiredTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/gender"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_gravity="center"
                    android:hint="@string/gender"
                    android:inputType="text"
                    android:autofillHints=""/>

                <TextView
                    android:id="@+id/is_activeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>


                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/nextButton"
                    android:layout_width="144dp"
                    android:layout_height="77dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="66dp"
                    android:background="@drawable/register" />

        </LinearLayout>

</ScrollView>